# FroggeDiscordUI

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/discordui/: colors.py  components.py  reaction_role.py
